# Random-Forest

./: CMakeLists.txt  README.md  bag.cpp  bag.h  dtree.cpp  dtree.h  item.cpp  item.h  main.cpp  randomforest.cpp  randomforest.h
sample_data/: optical-digits.txt
